--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,8 @@
 @import "base/utilities";
 @import "base/animations";
 
+@import "layout/grid";
+@import "layout/nav";
 @import "layout/header";
 
 @import "pages/home";
