--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,13 +1,11 @@
 $primary-color: #226ce0;
 $primary-color-dark: #1f2041;
 $primary-color-light: #f3f7fe;
-
-$box-shadow: lighten(#226ce0, 30%);
-
 $color-white: #fff;
 $color-black: #000;
-
 $color-grey: #707070;
+
+$box-shadow-color: lighten(#226ce0, 30%);
 
 $font-family: 'Montserrat', sans-serif;
 
