--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -16,3 +16,46 @@
     left: 0;
     transform: translate(-50%, -50%);
 }
+
+// MEDIA QUERY MANAGER
+/*
+0 - 600px:          Phone
+600 - 900px:        Tablet portrait
+900 - 1200px:       Tablet landscape
+1200 - 1800px:      is where normal styles apply
+1800+:              Big desktop
+
+$breakpoint argument choices:
+- phone
+- tab-portrait
+- tab-landscape
+- big-desktop
+
+1em = 16px
+*/
+
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width: 37.5em) {  // 600px
+            @content
+        };
+    }
+    
+    @if $breakpoint == tab-portrait {
+        @media (max-width: 56.25em) {  // 900px
+            @content
+        };
+    }
+
+    @if $breakpoint == tab-landscape {
+        @media (max-width: 75em) {   // 1200px
+            @content
+        };
+    }
+
+    @if $breakpoint == big-desktop {
+        @media (min-width: 112.5em) {  // 1200px
+            @content
+        };
+    }
+}
