--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,8 +7,25 @@
 }
 
 html {
-    font-size: 62.5%;
+    // This defined what 1 rem is.
+    font-size: 62.5%; // 1rem = 10px
     box-sizing: border-box;
+
+    @include respond(tab-landscape) {
+        font-size: 56.25%  // 1rem = 9px
+    }
+
+    @include respond(tab-portrait) {
+        font-size: 50%; // 1rem = 8px
+    }
+
+    @include respond(phone) {
+        font-size: 50%; // 1rem = 8px
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%;  // 1rem = 12px
+    }
 }
 
 body {
