--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,7 +3,8 @@ $primary-color-dark: #1f2041;
 $primary-color-light: #f3f7fe;
 $color-white: #fff;
 $color-black: #000;
-$color-grey: #707070;
+$color-grey-light: #707070;
+$color-grey-dark: #2b2b2b;
 
 $box-shadow-color: lighten(#226ce0, 30%);
 
