--- a/src/sass/layout/_nav.scss
+++ b/src/sass/layout/_nav.scss
@@ -57,6 +57,19 @@
         display: block;
     }
 
+    &__background {
+        visibility: hidden;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgba($color-black, 0.6);
+        z-index: 50;
+        opacity: 0;
+        transition: opacity .2s;
+    }
+
     &__checkbox {
         display: none;
     }
@@ -67,38 +80,28 @@
         width: 5rem;
         display: block;
         border-radius: 100%;
-        z-index: 2000;
+        z-index: 100;
         cursor: pointer;
         text-align: center;
         position: relative;
     }
 
-    &__background {
-        z-index: 500;
-        width: 3rem;
-        height: 3rem;
-        position: fixed;
-        top: 3rem;
-        right: 3rem;
-        // background: linear-gradient(to bottom left, #226CE0, #2265D2, #215EC3, #2157B5, #2150A6, #214998, #204389, #203C7B, #20356C, #202E5E, #1F274F, #1F2041);
-        background-color: $color-white;
-        border-radius: 100%;
-        transition: all .8s cubic-bezier(0.86, 0, 0.07, 1);
-    }
-
     &__nav {
-        height: 100vh;
-        top: 0;
-        left: 0;
         position: fixed;
-        z-index: 1000;
-        width: 0;
+        top: 0;
+        right: 0;
+        visibility: hidden;
+        background-color: $color-white;
+        width: 75vw;
+        height: 100vh;
+        z-index: 75;
+        
         opacity: 0;
-        transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transform: translateX(75vw);
+        transition: all .5s ease-in-out;
     }
 
     &__list {
-        @include absCenterXY;
         list-style-type: none;
         text-align: center;
 
@@ -149,12 +152,14 @@
         &::before { top: -.8rem }
     }
 
-    &__checkbox:checked ~ &__background {
-        transform: scale(100);
+    &__checkbox:checked ~ &__nav {
+        visibility: visible;
+        transform: translateX(0);
+        opacity: 1;
     }
 
-    &__checkbox:checked ~ &__nav {
-        width: 100%;
+    &__checkbox:checked ~ &__background {
+        visibility: visible;
         opacity: 1;
     }
 
