Implemented sidenav and made navigation fully responsive, used inline svg for logo, add fontawesome

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -4,6 +4,7 @@ $primary-color-light: #f3f7fe;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-light: #707070;
+$color-grey-medium: #494949;
 $color-grey-dark: #2b2b2b;
 
 $box-shadow-color: lighten(#226ce0, 30%);
