--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,30 +1,31 @@
-[class^="button-"] {
+.button-primary,
+.button-secondary,
+.button-tertiary {
     letter-spacing: .5px;
     font-weight: 600;
     text-transform: uppercase;
-    border-radius: .5rem;
-    padding: .8rem 2rem;
+    border-radius: .4rem;
+    padding: .9rem 2.3rem;
     cursor: pointer;
     display: inline-block;
     font-size: 1.5rem;
-    color: $primary-color;
     transition: all .3s;
 }
 
 .button-primary {
 
     &--shw-blue {
-        box-shadow: .6rem .6rem 0 $box-shadow-color;
+        box-shadow: .6rem .6rem 0 $box-shadow-color-blue;
 
-        &:hover { box-shadow: .8rem .8rem $box-shadow-color; transform: translateY(-3px) }
-        &:active { box-shadow: .6rem .6rem $box-shadow-color; transform: translateY(0) }
+        &:hover { box-shadow: .8rem .8rem $box-shadow-color-blue; transform: translateY(-3px) }
+        &:active { box-shadow: .6rem .6rem $box-shadow-color-blue; transform: translateY(0) }
     }
 
-    &--shw--black {
-        box-shadow: .6rem .6rem 0 $color-black;
+    &--shw-black {
+        box-shadow: .6rem .6rem 0 $box-shadow-color-black;
 
-        &:hover { box-shadow: .8rem .8rem 0 $color-black; transform: translateY(-3px) }
-        &:active { box-shadow: .6rem .6rem 0 $color-black; transform: translateY(0) }
+        &:hover { box-shadow: .8rem .8rem 0 $box-shadow-color-black; transform: translateY(-3px) }
+        &:active { box-shadow: .6rem .6rem 0 $box-shadow-color-black; transform: translateY(0) }
     }
 
     &--blue {
@@ -41,21 +42,33 @@
 }
 
 .button-secondary {
+    color: $primary-color;
     border: 3px solid $primary-color;
     background-color: $color-white;
-    box-shadow: .6rem .6rem 0 $box-shadow-color;
+    box-shadow: .6rem .6rem 0 $box-shadow-color-blue;
 
-    &:hover { box-shadow: .8rem .8rem $box-shadow-color; transform: translateY(-3px) }
-    &:active { box-shadow: .6rem .6rem $box-shadow-color; transform: translateY(0) }
+    &:hover { box-shadow: .8rem .8rem $box-shadow-color-blue; transform: translateY(-3px) }
+    &:active { box-shadow: .6rem .6rem $box-shadow-color-blue; transform: translateY(0) }
 }
 
 .button-tertiary {
+    padding: 1rem 2.3rem;
+    background-color: transparent;
 
     &--white {
-        border: 3px solid $color-white;
+        color: $color-white;
+        border: 2px solid $color-white;
     }
 
     &--blue {
-        border: 3px solid $primary-color;
+        color: $primary-color;
+        border: 2px solid $primary-color;
     }
+
+    &:hover { transform: translateY(-3px) }
+    &:active { transform: translateY(0px) }    
+}
+
+.button-container {
+    display: inline-block;
 }
