--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -66,7 +66,8 @@
     }
 
     &__waves {
-        @include absBottom;
+        position: absolute;
+        bottom: -1px;
     }
 
     &__circle {
