--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -11,3 +11,5 @@
 .margin-t-medium { margin-top: 3rem }
 .margin-t-big { margin-top: 4.5rem }
 .margin-t-huge { margin-top: 6rem }
+
+.t-align-center { text-align: center }
