--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -12,4 +12,9 @@
 .margin-t-big { margin-top: 4.5rem }
 .margin-t-huge { margin-top: 6rem }
 
+.margin-b-small { margin-bottom: 1.5rem }
+.margin-b-medium { margin-bottom: 3rem }
+.margin-b-big { margin-bottom: 4.5rem }
+.margin-b-huge { margin-bottom: 6rem }
+
 .t-align-center { text-align: center }
