--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -11,7 +11,7 @@
     &__title {
         color: $color-white;
         line-height: 1;
-        letter-spacing: 1px;
+        letter-spacing: 2px;
         text-transform: uppercase;
     
         &--small {
@@ -74,6 +74,7 @@
         font-size: 1.8rem;
         color: $color-white;
         font-weight: 400;
+        width: 95%;
 
         @include respond(tab-portrait-s) {
             width: 90%;
