--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -1,35 +1,37 @@
 .social {
     position: absolute;
-    bottom: 0;
-    padding: 0 0 2.5rem 1rem;
+    bottom: 2.5rem;
+    padding-left: 1rem;
     width: 100%;
 
     &__container {
-        display: flex;
-        justify-content: space-around;
+        height: 4.8rem;
+        display: inline-flex;
         align-items: center;
-        width: 23rem;
         background-color: $color-white;
+        padding: 0 1.8rem;
         border-radius: 50px;
-        padding: 1rem 1.1rem;
     }
 
     &__item {
-        width: 13%;
-        transition: all .2s;
+        transition: all .1s;
+
+        &:not(:last-child) {
+            margin-right: 1.3rem;
+        }
+
+        &:hover {
+            transform: scale(1.2);   
+        }
+
+        svg {
+            fill: $primary-color;
+            width: 3rem;
+        }
 
         a {
             display: flex;
             align-items: center;
-        }
-
-        img {
-            width: 100%;
-        }
-
-        &:hover {
-            transform-origin: center;
-            transform: scale(1.1);
         }
     }
 }
