--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -16,19 +16,16 @@
         &--left {
             grid-column: col-start 1 / col-end 7;
             grid-row: 1 / 3;
-            // background-color: grey;
         }
 
         &--right {
             grid-column: col-start 8 / -1;
             grid-row: 1 / 3;
-            // background-color: green;
         }
 
         .social {
             grid-row: 2 / 3;
             grid-column: col-start 1 / col-end 12;
-            // background-color: red;
         }
 
         @include respond(tab-portrait) {
@@ -54,9 +51,16 @@
         
         @include respond(phone) {
             height: 90vh;
+            grid-template-rows: repeat(2, min-content);
+            align-content: center;
 
             &--left {
                 grid-column: col-start 1 / -1;
+            }
+
+            &--left,
+            &--right {
+                grid-row: 1 / 2;
             }
         }
     }
