Made footer section

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -91,3 +91,12 @@
         }
     }
 }
+
+.footer {
+    &__heading {
+        font-size: 1.8rem;
+        text-transform: uppercase;
+        font-weight: 700;
+        color: $color-white;
+    }
+}
