--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,6 +10,7 @@
 @import "layout/grid";
 @import "layout/nav";
 @import "layout/header";
+@import "layout/footer";
 
 @import "components/button";
 @import "components/social";
