--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -1,20 +1,20 @@
-.margin-r-small { margin-right: 1.5rem }
+.margin-r-small { margin-right: 1.5rem !important }
 .margin-r-medium { 
-    margin-right: 2.5rem;
+    margin-right: 2.5rem !important;
 
     @include respond(phone) {
-        margin-right: 1.5rem;
+        margin-right: 1.5rem !important;
     }
 }
 
-.margin-t-small { margin-top: 1.5rem }
-.margin-t-medium { margin-top: 3rem }
-.margin-t-big { margin-top: 4.5rem }
-.margin-t-huge { margin-top: 6rem }
+.margin-t-small { margin-top: 1.5rem !important }
+.margin-t-medium { margin-top: 3rem !important }
+.margin-t-big { margin-top: 4.5rem !important }
+.margin-t-huge { margin-top: 6rem !important }
 
-.margin-b-small { margin-bottom: 1.5rem }
-.margin-b-medium { margin-bottom: 3rem }
-.margin-b-big { margin-bottom: 4.5rem }
-.margin-b-huge { margin-bottom: 6rem }
+.margin-b-small { margin-bottom: 1.5rem !important }
+.margin-b-medium { margin-bottom: 3rem !important }
+.margin-b-big { margin-bottom: 4.5rem !important }
+.margin-b-huge { margin-bottom: 6rem !important }
 
-.t-align-center { text-align: center }
+.t-align-center { text-align: center !important }
