--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -18,6 +18,7 @@
 
         @include respond(tab-portrait) {
             background-color: transparent;
+            padding: 0;
         }
 
         @include respond(phone) {
