--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -27,11 +27,11 @@
             height: 60vh;
 
             &--left {
-                grid-column: col-start 1 / col-end 6;
+                grid-column: col-start 1 / col-end 7;
             }
 
             &--right {
-                grid-column: col-start 7 / -1;
+                grid-column: col-start 8 / -1;
             }
         }
 
@@ -96,17 +96,48 @@
         }
     }
 
-    &__img {
-        width: 115%;
-        transform: translate(-4rem, 2.3rem);
+    &__title {
+        margin-bottom: 2rem;
 
-        @media (max-width: 68.75em) {
-            transform: translate(-4.5rem, 2.3rem);
+        @include respond(tab-portrait-s) {
+            margin-bottom: 3rem;
         }
+    }
 
-        @include respond(tab-portrait) {
-            width: 110%;
-            transform: translateX(-3rem);
+    &__img {
+        width: 100%;
+        display: block;
+        margin: 0 auto;
+    }
+
+    &__page-location {
+        margin-bottom: 3rem;
+        display: inline-flex;
+
+        @include respond(tab-portrait-s) {
+            display: none;
+        }
+    }
+
+    &__arrow {
+        display: flex;
+        align-items: center;
+        width: 2.3rem;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    &__page-location-link {
+        margin-left: .5rem;
+        font-size: 1.2rem;
+        color: $color-white;
+        font-weight: 500;
+
+        &:not(:last-child)::after {
+            content: "/";
+            margin-left: .5rem;
         }
     }
 
