--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -12,4 +12,24 @@
             transform: translateX(-3rem);
         }
     }
+
+    .social {
+        @include respond(tab-portrait) {
+            padding: 0;
+
+            &__container {
+                transform: translateY(-4rem);
+            }
+        }
+
+        @include respond(tab-portrait-s) {
+            padding-top: 3rem;
+
+            &__container {
+                transform: translateY(0);
+            }
+        }
+        
+
+    }
 }
