--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -25,7 +25,8 @@
 
 // MEDIA QUERY MANAGER
 /*
-0 - 600px:          Phone
+0 - 500px:          Phone small
+500px - 600px:      Phone
 600 - 800px:        Tablet portrait small
 800 - 900px:        Tablet portrait
 900 - 1200px:       Tablet landscape
@@ -33,15 +34,23 @@
 1800+:              Big desktop
 
 $breakpoint argument choices:
-- phone
-- tab-portrait
-- tab-landscape
-- big-desktop
+- phone-s => 31.25em
+- phone => 37.5em
+- tab-portrait-s => 50em
+- tab-portrait => 56.25em
+- tab-landscape => 75em
+- big-desktop => 112.5em
 
 1em = 16px
 */
 
 @mixin respond($breakpoint) {
+    @if $breakpoint == phone-s {
+        @media (max-width: 37.5em) {  // 500px
+            @content
+        };
+    }
+
     @if $breakpoint == phone {
         @media (max-width: 37.5em) {  // 600px
             @content
